added additional sorting with computed properties.

--- a/app/templates/components/bill-tile.hbs
+++ b/app/templates/components/bill-tile.hbs
@@ -1,5 +1,5 @@
 <ul>
-  {{#each billsFromPastMonth as |bill|}}
+  {{#each billsWithShortNameWherePossible as |bill|}}
     <p>{{bill.official_title}}, {{bill.last_version_on}}</p>
   {{/each}}
 </ul>
